[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/TransitionScreen.gd" type="Script" id=1]

[node name="TransitionScreen" type="CanvasLayer"]
layer = 5
script = ExtResource( 1 )

[node name="ColorRect1" type="ColorRect" parent="."]
margin_left = 773.912
margin_top = -538.323
margin_right = 1373.91
margin_bottom = 780.677
rect_rotation = 59.7004
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 766.749
margin_top = 484.985
margin_right = 1366.75
margin_bottom = 1803.99
rect_rotation = 59.7004
rect_pivot_offset = Vector2( 600, 0 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 1358.76
margin_top = 539.849
margin_right = 1958.76
margin_bottom = 1858.85
rect_rotation = 149.7
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = -298.03
margin_top = 1161.35
margin_right = 301.97
margin_bottom = 2480.35
rect_rotation = 149.7
rect_pivot_offset = Vector2( 600, 0 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
